update layout and add client seaction

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6389,7 +6389,76 @@ footer .footer .right-conn .ft-menu ul .blog-detail-warpper li,
   margin: 20px 8px 0;
   min-width: initial;
 }
-
+.clients-results {
+  padding: 50px 0 160px;
+}
+.clients-results .client-head h2 {
+  padding-bottom: 30px;
+}
+.clients-results .client-head p {
+  font-size: 18px;
+}
+.clients-results .client-head .review-star {
+  padding: 30px 0;
+}
+.clients-results .client-head .review-star li {
+  display: inline-block;
+  width: auto;
+  margin: 0 2px;
+}
+.clients-results .client-head .review-star li i {
+  font-size: 32px;
+  color: #f6c901;
+}
+.clients-results .client-head .readmore {
+  float: none;
+  display: inline-block;
+  margin-top: 10px;
+}
+.clients-results .review-list {
+  margin-top: 30px;
+}
+.clients-results .review-list .review-item {
+  margin: 0 15px;
+}
+.clients-results .review-list .review-box {
+  float: left;
+  width: 100%;
+  padding: 30px 20px;
+  margin: 10px 0;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background-color: rgba(25, 18, 44, 0.6);
+}
+.clients-results .review-list .review-box i {
+  float: left;
+  width: 100px;
+}
+.clients-results .review-list .review-box p {
+  color: rgba(255, 255, 255, 0.6);
+  line-height: 160%;
+  padding-top: 15px;
+}
+.clients-results .review-list .review-box .review-by {
+  padding-top: 15px;
+}
+.clients-results .review-list .review-box .review-by .avtar {
+  float: left;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+}
+.clients-results .review-list .review-box .review-by .avtar img {
+  -webkit-border-radius: 100px;
+  border-radius: 100px;
+}
+.clients-results .review-list .review-box .review-by h6 {
+  width: calc(100% - 50px);
+  padding: 15px 0 15px 10px;
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #fff;
+}
 .btn-main {
   display: inline-block;
   width: auto;
@@ -7092,6 +7161,9 @@ footer.white-footer .copyright-social-raw .copywrights p {
   .page-404-wrapper {
     padding: 140px 0 160px;
   }
+  .clients-results {
+    padding: 50px 0 130px;
+  }
 }
 @media only screen and (min-width: 1280px) and (max-width: 1365px) {
   .container {
@@ -7772,6 +7844,15 @@ footer.white-footer .copyright-social-raw .copywrights p {
   }
   .page-404-wrapper h3 {
     font-size: 32px;
+  }
+  .clients-results {
+    padding: 30px 0 100px;
+  }
+  .clients-results .client-head .review-star li i {
+    font-size: 28px;
+  }
+  .clients-results .review-list .review-item {
+    margin: 0 10px;
   }
 }
 @media only screen and (min-width: 1121px) and (max-width: 1279px) {
@@ -8713,6 +8794,26 @@ footer.white-footer .copyright-social-raw .copywrights p {
   }
   .page-404-wrapper h3 {
     font-size: 28px;
+  }
+
+  .clients-results {
+    padding: 30px 0 100px;
+  }
+  .clients-results .client-head .review-star {
+    padding: 20px 0;
+  }
+  .clients-results .client-head .review-star li i {
+    font-size: 28px;
+  }
+  .clients-results .review-list .review-item {
+    margin: 0 10px;
+  }
+  .clients-results .review-list .review-box .review-by .avtar {
+    width: 46px;
+    height: 46px;
+  }
+  .clients-results .review-list .review-box .review-by h6 {
+    width: calc(100% - 46px);
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1120px) {
@@ -9920,6 +10021,28 @@ footer.white-footer .copyright-social-raw .copywrights p {
   }
   .page-404-wrapper h5 {
     font-size: 18px;
+  }
+  .clients-results {
+    padding: 30px 0 80px;
+  }
+  .clients-results .client-head p {
+    font-size: 16px;
+  }
+  .clients-results .client-head .review-star {
+    padding: 20px 0;
+  }
+  .clients-results .client-head .review-star li i {
+    font-size: 26px;
+  }
+  .clients-results .review-list .review-item {
+    margin: 0 10px;
+  }
+  .clients-results .review-list .review-box .review-by .avtar {
+    width: 46px;
+    height: 46px;
+  }
+  .clients-results .review-list .review-box .review-by h6 {
+    width: calc(100% - 46px);
   }
 }
 @media (max-width: 991px) {
@@ -11546,6 +11669,34 @@ footer.white-footer .copyright-social-raw .copywrights p {
   }
   .page-404-wrapper h5 {
     font-size: 18px;
+  }
+  .clients-results {
+    padding: 30px 0 70px;
+  }
+  .clients-results .client-head p {
+    font-size: 16px;
+  }
+  .clients-results .client-head p br {
+    display: none;
+  }
+  .clients-results .client-head .review-star {
+    padding: 20px 0;
+  }
+  .clients-results .client-head .review-star li i {
+    font-size: 26px;
+  }
+  .clients-results .review-list .review-item {
+    margin: 0 10px;
+  }
+  .clients-results .review-list .review-box {
+    padding: 20px;
+  }
+  .clients-results .review-list .review-box .review-by .avtar {
+    width: 44px;
+    height: 44px;
+  }
+  .clients-results .review-list .review-box .review-by h6 {
+    width: calc(100% - 44px);
   }
 }
 @media (min-width: 767px) {
@@ -13743,6 +13894,34 @@ footer.white-footer .copyright-social-raw .copywrights p {
     height: 50px;
     line-height: 50px;
   }
+  .clients-results {
+    padding: 30px 0 70px;
+  }
+  .clients-results .client-head p {
+    font-size: 16px;
+  }
+  .clients-results .client-head p br {
+    display: none;
+  }
+  .clients-results .client-head .review-star {
+    padding: 20px 0;
+  }
+  .clients-results .client-head .review-star li i {
+    font-size: 24px;
+  }
+  .clients-results .review-list .review-item {
+    margin: 0 10px;
+  }
+  .clients-results .review-list .review-box {
+    padding: 20px;
+  }
+  .clients-results .review-list .review-box .review-by .avtar {
+    width: 44px;
+    height: 44px;
+  }
+  .clients-results .review-list .review-box .review-by h6 {
+    width: calc(100% - 44px);
+  }
 }
 @media only screen and (max-device-width: 480px) {
   html {
@@ -14694,6 +14873,9 @@ footer.white-footer .copyright-social-raw .copywrights p {
 
   .page-404-wrapper h3 {
     font-size: 20px;
+  }
+  .clients-results .client-head .readmore {
+    font-size: 14px;
   }
 }
 @media (max-width: 370px) {
