--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1177,14 +1177,14 @@ section {
   position: relative;
 }
 .copyright-section-raw .title-raw h4 span::before {
-  background: #34265e;
+  background: #34265ebd;
   position: absolute;
   left: 0;
-  bottom: -4px;
+  bottom: -7px;
   content: "";
   width: 100%;
-  height: 13px;
-  z-index: -1;
+  height: 8px;
+  /* z-index: -1;*/
 }
 .copyright-section-raw .copyright-section-col .row {
   counter-reset: section;
