--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -428,7 +428,7 @@ section {
 #header .header .logo {
   float: left;
   height: auto;
-  margin-top: 8px;
+  margin-top: 12px;
 }
 #header .header .logo a {
   height: auto;
@@ -4219,31 +4219,31 @@ input:focus + .slider {
   align-items: center;
   margin-top: 0px;
 }
-.video-wrapper .right-box .auther-col .avtar {
+.video-wrapper .right-box .auther-col .avatar {
   width: 52px;
   height: 52px;
   float: left;
 }
-.video-wrapper .right-box .auther-col .avtar img {
+.video-wrapper .right-box .auther-col .avatar img {
   width: 100%;
   height: 100%;
   border-radius: 100%;
 }
-.video-wrapper .right-box .auther-col .avtar-text {
+.video-wrapper .right-box .auther-col .avatar-text {
   width: calc(100% - 52px);
   float: left;
   padding-left: 15px;
 }
-.video-wrapper .right-box .auther-col .avtar-text h6 {
+.video-wrapper .right-box .auther-col .avatar-text h6 {
   font-size: 16px;
   color: #ffffff;
   letter-spacing: 0;
 }
-.video-wrapper .right-box .auther-col .avtar-text .sub {
+.video-wrapper .right-box .auther-col .avatar-text .sub {
   width: 100%;
   float: left;
 }
-.video-wrapper .right-box .auther-col .avtar-text span {
+.video-wrapper .right-box .auther-col .avatar-text span {
   font-size: 14px;
   font-weight: 400;
   line-height: 200%;
@@ -4252,7 +4252,7 @@ input:focus + .slider {
   color: #ffffff;
   opacity: 0.5;
 }
-.video-wrapper .right-box .auther-col .avtar-text span:before {
+.video-wrapper .right-box .auther-col .avatar-text span:before {
   content: "";
   position: absolute;
   width: 5px;
@@ -4263,13 +4263,13 @@ input:focus + .slider {
   left: -3px;
   top: 6px;
 }
-.video-wrapper .right-box .auther-col .avtar-text span:first-child {
+.video-wrapper .right-box .auther-col .avatar-text span:first-child {
   padding-left: 0px;
 }
-.video-wrapper .right-box .auther-col .avtar-text span:first-child::before {
+.video-wrapper .right-box .auther-col .avatar-text span:first-child::before {
   display: none;
 }
-.video-wrapper .right-box .auther-col .avtar-text span:last-child {
+.video-wrapper .right-box .auther-col .avatar-text span:last-child {
   padding-right: 0px;
 }
 
@@ -6442,13 +6442,13 @@ footer .footer .right-conn .ft-menu ul .blog-detail-warpper li,
 .clients-results .review-list .review-box .review-by {
   padding-top: 15px;
 }
-.clients-results .review-list .review-box .review-by .avtar {
+.clients-results .review-list .review-box .review-by .avatar {
   float: left;
   width: 50px;
   height: 50px;
   overflow: hidden;
 }
-.clients-results .review-list .review-box .review-by .avtar img {
+.clients-results .review-list .review-box .review-by .avatar img {
   -webkit-border-radius: 100px;
   border-radius: 100px;
 }
@@ -8808,7 +8808,7 @@ footer.white-footer .copyright-social-raw .copywrights p {
   .clients-results .review-list .review-item {
     margin: 0 10px;
   }
-  .clients-results .review-list .review-box .review-by .avtar {
+  .clients-results .review-list .review-box .review-by .avatar {
     width: 46px;
     height: 46px;
   }
@@ -10037,7 +10037,7 @@ footer.white-footer .copyright-social-raw .copywrights p {
   .clients-results .review-list .review-item {
     margin: 0 10px;
   }
-  .clients-results .review-list .review-box .review-by .avtar {
+  .clients-results .review-list .review-box .review-by .avatar {
     width: 46px;
     height: 46px;
   }
@@ -11691,7 +11691,7 @@ footer.white-footer .copyright-social-raw .copywrights p {
   .clients-results .review-list .review-box {
     padding: 20px;
   }
-  .clients-results .review-list .review-box .review-by .avtar {
+  .clients-results .review-list .review-box .review-by .avatar {
     width: 44px;
     height: 44px;
   }
@@ -13915,7 +13915,7 @@ footer.white-footer .copyright-social-raw .copywrights p {
   .clients-results .review-list .review-box {
     padding: 20px;
   }
-  .clients-results .review-list .review-box .review-by .avtar {
+  .clients-results .review-list .review-box .review-by .avatar {
     width: 44px;
     height: 44px;
   }
