--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14075,3 +14075,344 @@ input[type="text"] {
     font-size: 16px;
   }
 }
+.howdo-wrapper {
+  background: none;
+  padding: 0 0 50px 0;
+  margin-top: 50px;
+}
+
+.tempesta-banner .text-wrap h1 {
+  font-size: 60px;
+}
+
+.tempesta-banner .text-wrap p {
+  color: #fff;
+  margin-top: 15px;
+  font-size: 22px;
+}
+.tempesta-banner .text-wrap p:last-child {
+  color: #fff;
+  font-size: 18px;
+  opacity: 0.7;
+}
+
+.tempesta-banner .logo-btn {
+  display: inline-flex;
+}
+.divider {
+  border-left: 1px solid #fff;
+  margin: 0 12px 0 18px;
+  opacity: 0.15;
+}
+
+.media-by-numbers-section .number-content p {
+  font-size: 22px;
+  color: #fff;
+  margin-top: 70px;
+  opacity: 0.7;
+}
+
+.media-by-numbers-section .number-list {
+  line-height: 1;
+  margin-top: 90px;
+  display: flex;
+}
+.media-by-numbers-section .number-list .block-1 .number-list-row2 {
+  width: 600px;
+}
+
+.media-by-numbers-section .number-list .number-list-row1 {
+  color: #fff;
+  font-size: 110px;
+  margin-right: 300px;
+}
+.media-by-numbers-section .number-list .number-list-row2 {
+  width: 400px;
+  color: #fff;
+  font-size: 30px;
+  opacity: 0.6;
+  margin-top: 20px;
+  font-weight: 300px;
+}
+
+.tempesta-pricing-section .top p {
+  margin-top: 10px;
+}
+.tempesta-pricing-section .top p.startsat {
+  margin-bottom: -17px;
+  margin-top: 30px;
+  opacity: 1;
+  color: #fff;
+  font-size: 22px;
+}
+
+.tempesta-pricing-section
+  .pricing-table-raw
+  .pricing-table-col
+  .pricing-table
+  .middle {
+  margin-top: 0px;
+}
+
+.pricing-table-raw .pricing-table-col .pricing-table .top .btn-pricing {
+  position: static;
+  margin-top: 25px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+.middle .list-header {
+  font-size: 17px;
+  opacity: 0.5;
+  margin-bottom: 20px;
+}
+
+.middle .list-title {
+  color: #fff;
+  font-size: 22px;
+  margin: 2px 0 15px 0;
+}
+.workcycle-container {
+  width: 100%;
+  height: 900px;
+}
+
+.affiliates-saying-section.testimonial-raw .testimonial-col {
+  border: none;
+}
+.affiliates-saying-section .img-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.affiliates-saying-section.testimonial-raw
+  .slider-container
+  .item-thumbnail
+  .img-row
+  .img-box
+  img.img1 {
+  width: 70px;
+  height: 70px;
+}
+.affiliates-saying-section.testimonial-raw
+  .slider-container
+  .item-thumbnail
+  .img-row
+  .img-box
+  img.img2 {
+  width: 100px;
+  height: 100px;
+}
+.affiliates-saying-section.testimonial-raw
+  .slider-container
+  .item-thumbnail
+  .img-row
+  .img-box
+  img.img3 {
+  width: 130px;
+  height: 130px;
+}
+
+.tempesta-numberList-marquee {
+  overflow: hidden;
+  margin-left: -200px;
+  margin-right: -200px;
+}
+
+.tempesta-card-section {
+  padding: 100px 0 0 0;
+}
+.tempesta-card-section .tempesta-card-list {
+  display: flex;
+  justify-content: space-evenly;
+}
+.tempesta-card-section .tempesta-card-list .card-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.tempesta-card-section .tempesta-card-list .col2 .card:first-child {
+  margin-top: 200px;
+}
+
+.tempesta-card-list .card {
+  background: #110e24;
+  height: fit-content;
+  width: 390px;
+  padding: 30px 30px 30px 50px;
+  border-radius: 10px;
+  margin-bottom: 100px;
+}
+.tempesta-banner .text-wrap p span {
+  border-bottom: 5px solid #34265e;
+}
+
+.tempesta-card-list .card h2 {
+  color: #fff;
+  margin: 15px 0 20px 0;
+  font-size: 43px;
+  font-weight: 500;
+}
+
+.tempesta-card-list .card ul li::before {
+  content: "\2022";
+  color: #8429a5;
+  display: inline-block;
+  width: 20px;
+  font-size: 30px;
+  font-weight: bolder;
+}
+
+.tempesta-card-list .card ul li {
+  font-size: 17px;
+  color: #fff;
+  opacity: 0.7;
+  margin-top: 20px;
+}
+
+@media (max-width: 479px) {
+  .workcycle-container {
+    width: 100%;
+    height: 388px;
+  }
+  .howdo-wrapper {
+    padding-bottom: 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .workcycle-container {
+    width: 100%;
+    height: 770px;
+  }
+  .howdo-wrapper {
+    padding-bottom: 0;
+  }
+  .inner-banner.tempesta-banner.affiliate-banner .text-wrap h1 {
+    font-size: 45px;
+  }
+  .media-by-numbers-section .number-list .number-list-row1 {
+    font-size: 115px;
+  }
+  .tempesta-card-list .card {
+    width: 320px;
+  }
+  .affiliates-saying-section.testimonial-raw
+    .slider-container
+    .item-thumbnail
+    .img-row
+    .img-box
+    img.img1 {
+    width: 50px;
+    height: 50px;
+  }
+  .affiliates-saying-section.testimonial-raw
+    .slider-container
+    .item-thumbnail
+    .img-row
+    .img-box
+    img.img2 {
+    width: 80px;
+    height: 80px;
+  }
+  .affiliates-saying-section.testimonial-raw
+    .slider-container
+    .item-thumbnail
+    .img-row
+    .img-box
+    img.img3 {
+    width: 110px;
+    height: 110px;
+  }
+  .media-by-numbers-section .container .row .text-wrap.text-center p {
+    font-size: 16px;
+  }
+}
+@media (max-width: 812px) {
+  .workcycle-container {
+    width: 100%;
+    height: 338px;
+  }
+  .howdo-wrapper {
+    padding-bottom: 0;
+  }
+}
+@media (max-width: 479px) {
+  .inner-banner.tempesta-banner.affiliate-banner .text-wrap h1 {
+    font-size: 21px;
+  }
+  .media-by-numbers-section .number-list .number-list-row1 {
+    font-size: 60px;
+  }
+  .media-by-numbers-section .number-list .number-list-row2 {
+    font-size: 40px;
+  }
+  .tempesta-card-section .tempesta-card-list {
+    display: block;
+  }
+  .tempesta-card-section .tempesta-card-list .card {
+    width: 340px;
+    padding: 30px 30px 30px 50px;
+    margin-bottom: 50px;
+    margin-left: 4%;
+  }
+  .tempesta-card-section .tempesta-card-list .col2 .card:first-child {
+    margin-top: 0px;
+  }
+
+  .affiliates-saying-section.testimonial-raw
+    .slider-container
+    .item-thumbnail
+    .img-row
+    .img-box
+    img.img1 {
+    width: 38px;
+    height: 38px;
+  }
+  .affiliates-saying-section.testimonial-raw
+    .slider-container
+    .item-thumbnail
+    .img-row
+    .img-box
+    img.img2 {
+    width: 55px;
+    height: 55px;
+  }
+  .affiliates-saying-section.testimonial-raw
+    .slider-container
+    .item-thumbnail
+    .img-row
+    .img-box
+    img.img3 {
+    width: 70px;
+    height: 70px;
+  }
+  .media-by-numbers-section .number-list .number-list-row2 {
+    width: 274px;
+  }
+  .media-by-numbers-section .number-list .number-list-row2 {
+    font-size: 23px;
+  }
+  .tempesta-numberList-marquee {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+  .media-by-numbers-section .number-list .block-1 .number-list-row2 {
+    width: 274px;
+  }
+  .tempesta-pricing-section .top p.startsat {
+    margin-bottom: 0px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1120px) {
+  .inner-banner.affiliate-banner .text-wrap h1 {
+    font-size: 45px;
+  }
+  .tempesta-card-section .tempesta-card-list .card-col {
+    margin-left: 55px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1120px) {
+  .tempesta-numberList-marquee {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
