--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16496,7 +16496,7 @@ input[type="text"] {
 }
 .workcycle-container {
   width: 100%;
-  height: 900px;
+  height: auto;
 }
 .affiliates-saying-section.testimonial-raw .testimonial-col {
   border: none;
@@ -16581,7 +16581,7 @@ input[type="text"] {
 @media (max-width: 479px) {
   .workcycle-container {
     width: 100%;
-    height: 388px;
+    height: auto;
   }
   .howdo-wrapper {
     padding-bottom: 0;
@@ -16590,7 +16590,7 @@ input[type="text"] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .workcycle-container {
     width: 100%;
-    height: 770px;
+    height: auto;
   }
   .howdo-wrapper {
     padding-bottom: 0;
@@ -16638,7 +16638,7 @@ input[type="text"] {
 @media (max-width: 812px) {
   .workcycle-container {
     width: 100%;
-    height: 338px;
+    height: auto;
   }
   .howdo-wrapper {
     padding-bottom: 0;
@@ -16809,7 +16809,7 @@ input[type="text"] {
   transform: translate(-50%, -50%);
 }
 .pricing-table-raw .pricing-table-col .pricing-table p.price.Monthly {
-  display: block;
+  display: inline-block;
 }
 .pricing-table-raw .pricing-table-col .pricing-table p.price.Annually {
   display: none;
